--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=spring-boot-prometheus
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
